Begin writing manuscript. LaTex template, abstract, introduction.

--- a/sonar-response.Rmd
+++ b/sonar-response.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Energetic Consequences of SONAR Exposure"
+title: "Energetic Consequences of SONAR Exposure (preliminary)"
 author: "Max Czapanskiy"
 output: pdf_document
 bibliography: bibliography.bib
