Intro paragraph on feeding rates and prey energy

--- a/Sonar Response Manuscript/Sonar Response Manuscript.Rmd
+++ b/Sonar Response Manuscript/Sonar Response Manuscript.Rmd
@@ -33,7 +33,7 @@ Naval exercises involving sonar have been linked to mass strandings of cetaceans
 
 The two extant clades of cetaceans differ in their feeding styles. Toothed whales (odontocetes) are raptorial feeders and locate prey using echolocation [ref?]. Baleen whales (mysticetes) are filter feeders and capture prey by lunging [@goldbogen_scaling_2012] or continuous ram filter feeding [@werth_baleen_2016]. These feeding styles have profound effects on feeding rate, energy per feeding event, dive depth, and body size. Odontocetes feed at higher rates on smaller prey and most larger odontocetes must dive to extreme depths to find sufficient prey [ref?].  Lunge-feeding mysticetes (rorquals) engulf enormous quantities of prey-laden water, increasing the energy intake per feeding event but limiting dive depth and duration [@goldbogen_scaling_2012]. 
 
-*feeding rates can be estimated from tagging (lunges, buzzes), prey energy from active acoustics (rorquals) or the size of squid beaks and fish otoliths (?) in stomach contents (odontocetes)*
+Feeding rates and the energy obtained per feeding event can be empirically measured with multi-sensor tags, active acoustics, and stomach contents [jeremy's paper?]. The rapid echolocation clicking (buzzes) preceeding odontocete prey capture events have a kinematic and acoustic signature that register on tag sensors [ref?]. Similarly, rorqual lunges can be identified from an increase in speed followed by a rapid deceleration, usually associated with high pitch and roll angles [@cade_kinematic_2016]. Simultaneous prey mapping with tagging efforts using active acoustics have measured the biomass density of fish and krill schools targeted by rorquals. The sizes of squid beaks and fish otoliths *(?)* in odontocete stomach samples are a record of prey sizes and energy per feeding event.
 
 Empirical estimates of cetacean metabolic rates are logistically challenging for smaller species and infeasible for larger species. Oxygen consumption has been measured for captive odontocetes trained to swim under a metabolic hood using open-flow respirometry, showing that mass-specific stroke costs are largely size invariant [@williams_physiology_1993; @williams_swimming_2017]. Whether these metabolic estimates scale to larger odontocetes or mysticetes is unknown, so other methods of estimating energy expediture include breathing rates and hydrodynamic models [@sumich_swimming_1983; @potvin_metabolic_2012].
 
