--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -128,9 +128,18 @@ larger odontocetes must dive to extreme depths to find sufficient prey
 quantities of prey-laden water, increasing the energy intake per feeding
 event but limiting dive depth and duration (Goldbogen et al., 2012).
 
-\emph{feeding rates can be estimated from tagging (lunges, buzzes), prey
-energy from active acoustics (rorquals) or the size of squid beaks and
-fish otoliths (?) in stomach contents (odontocetes)}
+Feeding rates and the energy obtained per feeding event can be
+empirically measured with multi-sensor tags, active acoustics, and
+stomach contents {[}jeremy's paper?{]}. The rapid echolocation clicking
+(buzzes) preceeding odontocete prey capture events have a kinematic and
+acoustic signature that register on tag sensors {[}ref?{]}. Similarly,
+rorqual lunges can be identified from an increase in speed followed by a
+rapid deceleration, usually associated with high pitch and roll angles
+(Cade et al., 2016). Simultaneous prey mapping with tagging efforts
+using active acoustics have measured the biomass density of fish and
+krill schools targeted by rorquals. The sizes of squid beaks and fish
+otoliths \emph{(?)} in odontocete stomach samples are a record of prey
+sizes and energy per feeding event.
 
 Empirical estimates of cetacean metabolic rates are logistically
 challenging for smaller species and infeasible for larger species.
@@ -155,6 +164,11 @@ a given body size {[}gough?{]}.
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
+\hypertarget{ref-cade_kinematic_2016}{}
+Cade, D.E., Friedlaender, A.S., Calambokidis, J., Goldbogen, J.A., 2016.
+Kinematic diversity in rorqual whale feeding mechanisms. Current Biology
+26, 2617--2624. \url{https://doi.org/10.1016/j.cub.2016.07.037}
+
 \hypertarget{ref-deruiter_multivariate_2017}{}
 DeRuiter, S.L., Langrock, R., Skirbutas, T., Goldbogen, J.A.,
 Calambokidis, J., Friedlaender, A.S., Southall, B.L., 2017. A
