--- a/Sonar Response Manuscript/bibliography.bib
+++ b/Sonar Response Manuscript/bibliography.bib
@@ -309,7 +309,7 @@ Swimming efficiencies of fish and cetaceans have been related to a certain synch
 	urldate = {2019-03-23},
 	date = {2012-09-14},
 	langid = {english},
-	keywords = {Basal metabolic rate measurement, Bioenergetics, Blue whales, Drag, Fin whales, Minke whales, Physiological parameters, Thrust},
+	keywords = {Physiological parameters, Bioenergetics, Basal metabolic rate measurement, Blue whales, Drag, Fin whales, Minke whales, Thrust},
 	file = {Full Text PDF:/Users/frank/Zotero/storage/JERB387D/Potvin et al. - 2012 - Metabolic Expenditures of Lunge Feeding Rorquals A.pdf:application/pdf;Snapshot:/Users/frank/Zotero/storage/TWV8JGYH/article.html:text/html}
 }
 
@@ -366,4 +366,24 @@ Despite speculation about the swimming efficiency of cetaceans, few studies have
 	langid = {english},
 	keywords = {Bowhead whales, Fluid flow, Hydrodynamics, Lips, Mouth, Predation, Right whales, Tongue},
 	file = {Full Text PDF:/Users/frank/Zotero/storage/44BHMFGG/Werth and Potvin - 2016 - Baleen Hydrodynamics and Morphology of Cross-Flow .pdf:application/pdf;Snapshot:/Users/frank/Zotero/storage/RNNNH8ER/article.html:text/html}
+}
+
+@article{cade_kinematic_2016,
+	title = {Kinematic Diversity in Rorqual Whale Feeding Mechanisms},
+	volume = {26},
+	issn = {0960-9822},
+	url = {http://www.sciencedirect.com/science/article/pii/S0960982216307886},
+	doi = {10.1016/j.cub.2016.07.037},
+	abstract = {Summary
+Rorqual whales exhibit an extreme lunge filter-feeding strategy characterized by acceleration to high speed and engulfment of a large volume of prey-laden water [1, 2, 3, 4]. Although tagging studies have quantified the kinematics of lunge feeding, the timing of engulfment relative to body acceleration has been modeled conflictingly because it could never be directly measured [5, 6, 7]. The temporal coordination of these processes has a major impact on the hydrodynamics and energetics of this high-cost feeding strategy [5, 6, 7, 8, 9]. If engulfment and body acceleration are temporally distinct, the overall cost of this dynamic feeding event would be minimized. However, greater temporal overlap of these two phases would theoretically result in higher drag and greater energetic costs. To address this discrepancy, we used animal-borne synchronized video and 3D movement sensors to quantify the kinematics of both the skull and body during feeding events. Krill-feeding blue and humpback whales exhibited temporally distinct acceleration and engulfment phases, with humpback whales reaching maximum gape earlier than blue whales. In these whales, engulfment coincided largely with body deceleration; however, humpback whales pursuing more agile fish demonstrated highly variable coordination of skull and body kinematics in the context of complex prey-herding techniques. These data suggest that rorquals modulate the coordination of acceleration and engulfment to optimize foraging efficiency by minimizing locomotor costs and maximizing prey capture. Moreover, this newfound kinematic diversity observed among rorquals indicates that the energetic efficiency of foraging is driven both by the whale’s engulfment capacity and the comparative locomotor capabilities of predator and prey.
+Video Abstract},
+	pages = {2617--2624},
+	number = {19},
+	journaltitle = {Current Biology},
+	shortjournal = {Current Biology},
+	author = {Cade, David E. and Friedlaender, Ari S. and Calambokidis, John and Goldbogen, Jeremy A.},
+	urldate = {2019-03-23},
+	date = {2016-10-10},
+	keywords = {blue whale, camera tag, filter feeding, foraging kinematics, humpback whale, lunge feeding, rorqual},
+	file = {ScienceDirect Full Text PDF:/Users/frank/Zotero/storage/KFUCHFJG/Cade et al. - 2016 - Kinematic Diversity in Rorqual Whale Feeding Mecha.pdf:application/pdf;ScienceDirect Snapshot:/Users/frank/Zotero/storage/H7NV37WI/S0960982216307886.html:text/html}
 }
